--- a/NorthEastSouthWest/Base.lproj/Main.storyboard
+++ b/NorthEastSouthWest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bON-Gu-zDm">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -17,102 +17,136 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMI-Ce-voW">
-                                <rect key="frame" x="170" y="44" width="74.5" height="38"/>
+                                <rect key="frame" x="170" y="88" width="74.5" height="38"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="North">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                     <color key="baseBackgroundColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="directionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zw8-oC-ddE"/>
+                                    <segue destination="gpR-OT-PPW" kind="presentation" id="PtG-8U-24H"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9i6-qV-Dpl">
-                                <rect key="frame" x="332" y="407" width="62" height="82"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9i6-qV-Dpl">
+                                <rect key="frame" x="291" y="451" width="103" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="103" id="yYT-n1-2c9"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="East">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                     <color key="baseBackgroundColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="directionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ce6-ac-U5L"/>
+                                    <segue destination="gpR-OT-PPW" kind="presentation" id="NfP-a7-M9U"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1JS-v8-gfQ">
-                                <rect key="frame" x="20" y="407" width="69" height="82"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1JS-v8-gfQ">
+                                <rect key="frame" x="20" y="451" width="107" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="107" id="G13-5d-dRR"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="West">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                     <color key="baseBackgroundColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="directionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Oj-W4-0SB"/>
+                                    <segue destination="gpR-OT-PPW" kind="presentation" id="WhH-RN-jg9"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jTj-vx-K2D">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jTj-vx-K2D">
                                 <rect key="frame" x="170" y="824" width="76" height="38"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="South">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                     <color key="baseBackgroundColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="directionButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LOY-Yl-ehf"/>
+                                    <segue destination="gpR-OT-PPW" kind="presentation" id="YFG-5k-hr7"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1JS-v8-gfQ" secondAttribute="bottom" constant="373" id="3Ga-6l-dg7"/>
-                            <constraint firstItem="9i6-qV-Dpl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="363" id="5nR-l8-faP"/>
-                            <constraint firstItem="1JS-v8-gfQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="61r-bQ-lhR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9i6-qV-Dpl" secondAttribute="bottom" constant="373" id="8PP-5F-5Qt"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9i6-qV-Dpl" secondAttribute="trailing" constant="20" id="AhX-nM-ptW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jTj-vx-K2D" secondAttribute="bottom" id="EZ1-zK-T7D"/>
+                            <constraint firstItem="9i6-qV-Dpl" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="G1D-AR-HyC"/>
                             <constraint firstItem="jMI-Ce-voW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HJ9-BY-CCA"/>
+                            <constraint firstItem="1JS-v8-gfQ" firstAttribute="baseline" secondItem="9i6-qV-Dpl" secondAttribute="baseline" id="Tje-Br-yet"/>
+                            <constraint firstItem="1JS-v8-gfQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="363" id="avd-ZX-beW"/>
                             <constraint firstItem="jMI-Ce-voW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="170" id="dRU-Y4-VDl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jMI-Ce-voW" secondAttribute="trailing" constant="169.5" id="emv-tn-dP1"/>
-                            <constraint firstItem="1JS-v8-gfQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="363" id="myb-Ja-EzT"/>
+                            <constraint firstItem="1JS-v8-gfQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="nqp-j2-R9J"/>
                             <constraint firstItem="jTj-vx-K2D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="170" id="qDB-pn-PBA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jTj-vx-K2D" secondAttribute="trailing" constant="168" id="qu7-9O-hiS"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ccn-R7-Pwl"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
+            <point key="canvasLocation" x="928.98550724637687" y="97.767857142857139"/>
         </scene>
         <!--Single Direction View Controller-->
         <scene sceneID="lLY-5L-BLQ">
             <objects>
                 <viewController id="gpR-OT-PPW" customClass="SingleDirectionViewController" customModule="NorthEastSouthWest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R8w-N7-Wz0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0UF-kB-DyZ">
-                                <rect key="frame" x="137" y="403" width="140" height="90"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="JE7-oU-GN9"/>
-                                    <constraint firstAttribute="width" constant="140" id="euq-6I-dgV"/>
-                                </constraints>
-                                <color key="tintColor" systemColor="systemGray2Color"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button">
-                                    <fontDescription key="titleFontDescription" type="system" pointSize="40"/>
-                                    <color key="baseForegroundColor" systemColor="systemIndigoColor"/>
-                                </buttonConfiguration>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aGE-a8-Ya3">
+                                <rect key="frame" x="163.5" y="399" width="87" height="44.5"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <color key="textColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="C5H-gP-1GS"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
-                            <constraint firstItem="0UF-kB-DyZ" firstAttribute="centerY" secondItem="R8w-N7-Wz0" secondAttribute="centerY" id="oA2-I7-ym4"/>
-                            <constraint firstItem="0UF-kB-DyZ" firstAttribute="centerX" secondItem="R8w-N7-Wz0" secondAttribute="centerX" id="otM-BJ-qbY"/>
+                            <constraint firstItem="aGE-a8-Ya3" firstAttribute="centerX" secondItem="R8w-N7-Wz0" secondAttribute="centerX" id="7c1-Du-e4K"/>
+                            <constraint firstItem="aGE-a8-Ya3" firstAttribute="centerY" secondItem="R8w-N7-Wz0" secondAttribute="centerY" id="Zau-0I-S4Y"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="K1W-RY-w5i"/>
+                    <connections>
+                        <outlet property="directionLabel" destination="aGE-a8-Ya3" id="Vdy-Xz-qOd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0cD-gY-H4A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="892.75362318840587" y="97.767857142857139"/>
+            <point key="canvasLocation" x="1802.8985507246377" y="97.767857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h9z-Em-5Bs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bON-Gu-zDm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oI9-x4-WXf">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bxz-dH-yCf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nsz-pa-GNV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="NfP-a7-M9U"/>
+    </inferredMetricsTieBreakers>
     <resources>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
